--- a/30a-strange-market/src/index.css
+++ b/30a-strange-market/src/index.css
@@ -1,122 +1,68 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --s: 25px;
+  /* control the size */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --_g: olive 90deg, #fdac53;
+  background: conic-gradient(from 90deg at 3px 3px, var(--_g)),
+    conic-gradient(from 90deg at 3px 3px, var(--_g));
+  background-size: var(--s) var(--s), calc(var(--s) / 5) calc(var(--s) / 5);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
-.newpost-form {
-
-display: inline;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  background-color: linen;
-  opacity: .95;
-  border: 5px solid lightcoral;
+.nav {
+  position: fixed;
+  z-index: 13;
+  top: 0;
+  width: 100%;
+  height: 25px;
   font: timesnewroman;
-  font-size: large;
-  font-weight: bolder;
-  font-stretch: wider;
-  line-height: 25pt;
-  color: black;
-  width: 250px;
-  height: 400px;
-  word-wrap: break-word;
-  padding: 25px;
+  background-color: linen;
+  color: midnightblue;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 3px solid midnightblue;
   border-radius: 10px;
-  margin: 10px 10px;
-
-
 }
 
 .post-card-container {
-
   display: grid;
-  grid-template-columns: auto auto auto;
-  padding-top: 25px;
+  grid-template-columns: auto auto auto auto;
+  flex-direction: column;
+  padding-top: 75px;
   justify-content: space-evenly;
   max-width: 100%;
+}
 
-
+.search-bar {
+  position: absolute;
+  top: 30px;
+  z-index: 13;
+  padding-top: 5px;
+  margin-top: 35px;
+  margin-left: 50px;
+  width: 900px;
+  height: 25px;
+  border-radius: 10px;
+  background-color: linen;
+  border: 3px solid midnightblue;
 }
 
 .post-card {
-  display: flex;
-  justify-content: left;
-  align-items: flex-start;
-  background-color: linen;
-  opacity: .95;
-  border: 5px solid lightcoral;
+  display: inline-grid;
+  justify-content: space-evenly;
+  justify-items: stretch;
+  background-color: #34568b;
+  opacity: 0.95;
+  border: 3px solid midnightblue;
+  margin-left: 35px;
+  padding-left: 15px;
   font: timesnewroman;
-  font-size: 12px;
-  font-weight: bolder;
-  line-height: 14pt;
-  color: black;
-  width: 300px;
+  font-size: 12pt;
+  line-height: 20pt;
+  color: antiquewhite;
+  width: 250px;
   height: 400px;
   word-wrap: break-word;
   padding: 25px;
@@ -125,15 +71,31 @@ display: inline;
   overflow-y: scroll;
 }
 
-.flip-card-back {
-  display: flex;
-  flex-direction: column;
-  word-wrap: break-word;
-    align-items: flex-start;
-  color: black; 
-  background-color: powderblue;
+.newPost-form {
+  display: inline-table;
+  justify-content: stretch;
+  background-color: #f7cac9;
+  opacity: 0.95;
+  border: 3px solid midnightblue;
+  margin-left: 33%;
+  margin-top: 100px;
+  font: timesnewroman;
+  font-size: 10pt;
+  font-weight: bolder;
+  line-height: 30pt;
+  color: midnightblue;
+  flex-wrap: wrap;
+  padding: 25px;
+  border-radius: 10px;
+  overflow-y: scroll;
 }
 
+.flip-card-back {
+  word-wrap: break-word;
+  justify-content: flex-start;
+  color: antiquewhite;
+  background-color: #0072b5;
+}
 
 .post-img {
   height: 200px;
@@ -141,7 +103,6 @@ display: inline;
   padding: 2 px;
   border: 12 px solid lawngreen;
   border-radius: 10px;
-
 }
 
 .post-img-back {
@@ -151,120 +112,95 @@ display: inline;
   padding: 2 px;
   border: 12 px solid lawngreen;
   border-radius: 10px;
-
 }
 
 .details {
-
-  position: sticky;
-  background-color: #5E9FA3;
-  color: #B55A30;
+  position: sticky-bottom;
+  background-color: #ff6f61;
+  color: midnightblue;
   font-size: 12pt;
   font-weight: bolder;
   font: timesnewroman;
   padding: 10px;
   border-radius: 5px;
-  border: 3px solid #FFFFFF
+  border: 3px solid #ffffff;
 }
 
 .details:hover {
-  color: cornflowerblue;
-  background-color: #FFFFFF;
-  border: 2px solid cornflowerblue
+  color: #ff6f61;
+  background-color: #ffffff;
+  border: 2px solid #ff6f61;
 }
 
 .delete {
-  background-color: #FDAC53;
-  color: #FFFFFF;
+  background-color: #fdac53;
+  color: #ffffff;
   font-size: 12pt;
   font-weight: bold;
   font: timesnewroman;
   padding: 10px;
   border-radius: 5px;
-  border: 3px solid #FFFFFF
+  border: 3px solid #ffffff;
 }
 
-.stash {
-
-  position: sticky;
-  background-color: darkolivegreen;
+.profile-log-button {
+  position: fixed;
+  justify-content: center;
+  bottom: 50px;
+  background-color: #ff69b4;
   color: antiquewhite;
-  font-size: 12pt;
+  font: timesnewroman;
+  font-size: 16pt;
   font-weight: bolder;
   font: timesnewroman;
-  padding: 5px;
-  border-radius: 5px;
-  border: 3px solid #FFFFFF
+  padding: 10px;
+  border-radius: 15px;
+  border: 5px solid #ffffff;
 }
 
 .flip {
-
   position: sticky;
   background-color: goldenrod;
   color: antiquewhite;
   font-size: 12pt;
   font-weight: bolder;
   font: timesnewroman;
-  padding: 5px;
+  padding: 10px;
   border-radius: 5px;
-  border: 3px solid #FFFFFF
+  border: 3px solid #ffffff;
 }
-
+.flip:hover {
+  color: #ff69b4;
+  background-color: #ffffff;
+  border: 2px solid #ff69b4;
+}
 
 .delete-button:hover {
   color: tomato;
-  background-color: #FFFFFF;
-  border: 2px solid tomato
-}
-
-.nav {
-  top: 0%;
-  background-color: linen;
-  display: flex;
-  flex-direction: row;
-  align-items: right;
-  justify-content: space-evenly;
-  width: 100%;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  border: 3px solid lightcoral;
-  border-radius: 10px;
-}
-
-.newPlayer-form {
-
-  background-color: lightslategray;
-  border: 3px solid lightcoral;
-  font: times;
-  color: purple;
-  width: 250px;
-  height: 400px;
-  word-wrap: break-word;
-  padding: 15px;
-  border-radius: 10px;
-  margin: 10px 10px;
+  background-color: #ffffff;
+  border: 2px solid tomato;
 }
 
 .reset {
   bottom: 10px;
   justify-content: center;
-  background-color: tomato;
-  color: #FFFFFF;
+  background-color: #ff69b4;
+  color: #ffffff;
   border: none;
-  padding: 5px;
+  padding: 7px;
   margin-left: 5px;
   border-radius: 5px;
-  border: 2px solid #FFFFFF
+  border: 2px solid #ffffff;
 }
 
 .submit {
   bottom: 10px;
   justify-content: center;
-  background-color: forestgreen;
-  color: #FFFFFF;
+  background-color: #fdac53;
+  color: #ffffff;
   border: none;
   padding: 5px;
   margin-left: 5px;
   border-radius: 5px;
-  border: 2px solid #FFFFFF
+  border: 2px solid #ffffff;
 }
